--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.8.1",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
+    "nodemailer": "^6.9.16",
     "openai": "^4.72.0",
     "pg": "^8.13.1",
     "react": "^18.3.1",
@@ -44,6 +45,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
