--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@neondatabase/serverless": "^0.10.3",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
@@ -21,9 +23,12 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.36.4",
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.460.0",
+    "mongodb": "^6.11.0",
     "mongoose": "^8.8.1",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
@@ -32,7 +37,7 @@
     "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-email-components": "^0.1.13",
+    "react-email-components": "^0.1.3",
     "react-hook-form": "^7.53.2",
     "resend": "^4.0.1-alpha.0",
     "tailwind-merge": "^2.5.4",
@@ -44,14 +49,22 @@
     "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
     "@types/next-auth": "^3.13.0",
-    "@types/node": "^20",
+    "@types/node": "^20.17.7",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.28.1",
     "postcss": "^8",
+    "prisma": "^5.22.0",
     "react-email": "3.0.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
+  },
+  "description": "npm install nodemailer",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
