--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@react-email/components": "0.0.28",
     "ai": "^3.4.33",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20.17.7",
     "@types/nodemailer": "^6.4.17",
@@ -55,10 +57,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.28.1",
-    "postcss": "^8",
+    "postcss": "^8.4.49",
     "prisma": "^5.22.0",
     "react-email": "3.0.2",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.15",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   },
